--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,7 +30,16 @@ section#telefone {
     left: 50%;
     transform: translate(-50%, -50%);
 
+
     height: 627px;
     width: 311px;
     background: url('../imagens/frame-iphone.png') no-repeat;
+}
+
+iframe#tela {
+    position: relative;
+    top: 80px;
+    left: 22px;
+    height: 471px;
+    width: 267px;
 }
